--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ before_script:
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 1
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 1
   - sudo pip3 install conan
+  - cd stlab && mkdir -p build && cd build && conan install .. --build=missing -s build_type=Debug && cmake -DCMAKE_BUILD_TYPE=debug -Dstlab_testing=ON ..
 script:
   - cmake .
   - cmake --build . --target test_ip_filter -- VERBOSE=1
@@ -15,4 +16,4 @@ deploy:
   provider: script
   skip_cleanup: true
   script:
-- curl -T lsmonitor-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -u0xadb:$BINTRAY_API_KEY "https://api.bintray.com/content/0xadb/otus/homework/$TRAVIS_BUILD_NUMBER/lsmonitor-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
+    - curl -T lsmonitor-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb -u0xadb:$BINTRAY_API_KEY "https://api.bintray.com/content/0xadb/otus/homework/$TRAVIS_BUILD_NUMBER/lsmonitor-0.0.$TRAVIS_BUILD_NUMBER-Linux.deb;deb_distribution=trusty;deb_component=main;deb_architecture=amd64;publish=1"
