--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,28 @@ language: cpp
 before_script:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
-  - sudo apt-get -y install gcc-5 g++-5 libboost-test-dev python3-pip
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 1
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-5 1
+  - sudo apt-get -y install gcc-7 g++-7 libboost-test-dev python3-pip
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
+  - |
+    cd /opt \
+    && sudo wget https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0-Linux-x86_64.tar.gz \
+    && sudo tar xf ./cmake-3.14.0-Linux-x86_64.tar.gz \
+    && mkdir -p ~/bin \
+    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/cmake ~/bin/cmake \
+    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/ccmake ~/bin/ccmake \
+    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/cpack ~/bin/cpack \
+    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/ctest ~/bin/ctest
   - sudo pip3 install conan
-  - cd stlab && mkdir -p build && cd build && conan install .. --build=missing -s build_type=Debug && cmake -DCMAKE_BUILD_TYPE=debug -Dstlab_testing=ON ..
+  - |
+    cd $TRAVIS_BUILD_DIR/stlab \
+    && mkdir -p build \
+    && cd build \
+    && conan install .. --build=missing -s build_type=Debug
 script:
+  - cd $TRAVIS_BUILD_DIR/stlab/build && cmake -DCMAKE_BUILD_TYPE=debug -Dstlab_testing=ON .. && cd $TRAVIS_BUILD_DIR
   - cmake .
-  - cmake --build . --target test_ip_filter -- VERBOSE=1
-  - cmake --build . --target test -- VERBOSE=1
+  - cmake --build . -- VERBOSE=1
   - cmake --build . --target package -- VERBOSE=1
 deploy:
   provider: script
