--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: cpp
 before_script:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
-  - sudo apt-get -y install gcc-7 g++-7 libboost-test-dev python3-pip
+  - sudo apt-get -y install gcc-7 g++-7 python3-pip libspdlog-dev
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
   - |
@@ -14,6 +14,7 @@ before_script:
     && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/ccmake ~/bin/ccmake \
     && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/cpack ~/bin/cpack \
     && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/ctest ~/bin/ctest
+  - sudo pip install conan
 script:
   - cmake .
   - cmake --build . -- VERBOSE=1
