--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ dist: xenial
 language: cpp
 before_script:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get update && sudo apt-get -y dist-upgrade
-  - sudo apt-get -y install gcc g++ python3-pip libspdlog-dev
+  - sudo apt-get update
+  - sudo apt-get -y install gcc-7 g++-7 python3-pip libspdlog-dev
+  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
   - sudo pip install --upgrade pip
   - |
     cd /opt \
