--- a/.travis.yml
+++ b/.travis.yml
@@ -3,21 +3,22 @@ language: cpp
 before_script:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
-  - sudo apt-get -y install gcc-7 g++-7 python3-pip libspdlog-dev
+  - sudo apt-get -y install gcc-7 g++-7 python3-pip libspdlog-dev virtualenv
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
-  - sudo pip install --upgrade pip
   - |
-    cd /opt \
-    && sudo wget https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0-Linux-x86_64.tar.gz \
-    && sudo tar xf ./cmake-3.14.0-Linux-x86_64.tar.gz \
-    && mkdir -p ~/bin \
-    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/cmake ~/bin/cmake \
-    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/ccmake ~/bin/ccmake \
-    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/cpack ~/bin/cpack \
-    && ln -s /opt/cmake-3.14.0-Linux-x86_64/bin/ctest ~/bin/ctest
-  - sudo pip install conan
-script:
+   script:
+  - virtualenv env
+  - |
+    cd env \
+    && wget https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0-Linux-x86_64.tar.gz \
+    && tar xf ./cmake-3.14.0-Linux-x86_64.tar.gz \
+    && cd ..
+  - source env/bin/activate
+  - env
+  - cmake --version
+  - pip install --upgrade pip
+  - pip install conan
   - cmake .
   - cmake --build . -- VERBOSE=1
   - cmake --build . --target package -- VERBOSE=1
