--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,12 @@ script:
     cd env \
     && wget -nv https://github.com/Kitware/CMake/releases/download/v3.14.0/cmake-3.14.0-Linux-x86_64.tar.gz \
     && tar xf ./cmake-3.14.0-Linux-x86_64.tar.gz \
-    && cd ..
+    && cd cmake-3.14.0-Linux-x86_64/bin \
+    && ln -s cmake $TRAVIS_BUILD_DIR/env/bin/cmake \
+    && ln -s cmake $TRAVIS_BUILD_DIR/env/bin/ccmake \
+    && ln -s cmake $TRAVIS_BUILD_DIR/env/bin/cpack \
+    && ln -s cmake $TRAVIS_BUILD_DIR/env/bin/ctest \
+    && cd $TRAVIS_BUILD_DIR
   - $TRAVIS_BUILD_DIR/env/bin/cmake --version
   - $TRAVIS_BUILD_DIRenv/bin/pip3 install --upgrade pip
   - $TRAVIS_BUILD_DIRenv/bin/pip3 install conan
