--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ script:
   - $TRAVIS_BUILD_DIR/env/bin/cmake --version
   - $TRAVIS_BUILD_DIR/env/bin/pip3 install --upgrade pip
   - $TRAVIS_BUILD_DIR/env/bin/pip3 install conan
-  - mkdir -p build && cd build
-  - $TRAVIS_BUILD_DIR/env/bin/cmake --debug-output -H../ -B./
-  - $TRAVIS_BUILD_DIR/env/bin/cmake --build . -- VERBOSE=1
-  - $TRAVIS_BUILD_DIR/env/bin/cmake --build . --target package -- VERBOSE=1
+  - mkdir -p $TRAVIS_BUILD_DIR/build && cd $TRAVIS_BUILD_DIR/build
+  - $TRAVIS_BUILD_DIR/env/bin/cmake --debug-output -H$TRAVIS_BUILD_DIR/ -B$TRAVIS_BUILD_DIR/build/
+  - $TRAVIS_BUILD_DIR/env/bin/cmake --build $TRAVIS_BUILD_DIR/build/ -- VERBOSE=1
+  - $TRAVIS_BUILD_DIR/env/bin/cmake --build $TRAVIS_BUILD_DIR/build/ --target package -- VERBOSE=1
 deploy:
   provider: script
   skip_cleanup: true
