adding new events

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(lsmonitor
   lsmonitor/main.cpp
   lsmonitor/lsprobe_reader.cpp
   lsmonitor/lsprobe_event.cpp
+  lsmonitor/utility.cpp
   )
 
 set_target_properties(lsmonitor PROPERTIES
