--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: cpp
 before_script:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update
-  - sudo apt-get -y install gcc-7 g++-7 python3-pip
+  - sudo apt-get -y install gcc-7 g++-7 python3-pip ninja-build
   - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 1
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 1
   - sudo pip3 install virtualenv
@@ -23,9 +23,9 @@ script:
   - $TRAVIS_BUILD_DIR/env/bin/pip3 install --upgrade pip
   - $TRAVIS_BUILD_DIR/env/bin/pip3 install conan
   - mkdir -p $TRAVIS_BUILD_DIR/build && cd $TRAVIS_BUILD_DIR/build
-  - $TRAVIS_BUILD_DIR/env/bin/cmake -DCMAKE_PREFIX_PATH=$TRAVIS_BUILD_DIR/env/ -H$TRAVIS_BUILD_DIR/ -B$TRAVIS_BUILD_DIR/build/
-  - $TRAVIS_BUILD_DIR/env/bin/cmake --build $TRAVIS_BUILD_DIR/build/ -- VERBOSE=1
-  - $TRAVIS_BUILD_DIR/env/bin/cmake --build $TRAVIS_BUILD_DIR/build/ --target package -- VERBOSE=1
+  - $TRAVIS_BUILD_DIR/env/bin/cmake -DCMAKE_VERBOSE_MAKEFILE:BOOL=ON -GNinja -DCMAKE_PREFIX_PATH=$TRAVIS_BUILD_DIR/env/ -H$TRAVIS_BUILD_DIR/ -B$TRAVIS_BUILD_DIR/build/
+  - $TRAVIS_BUILD_DIR/env/bin/cmake --build $TRAVIS_BUILD_DIR/build/
+  - $TRAVIS_BUILD_DIR/env/bin/cmake --build $TRAVIS_BUILD_DIR/build/ --target package
 deploy:
   provider: script
   skip_cleanup: true
