updated lsprobe; replaced string ids with enums;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories(
   ${CMAKE_CURRENT_SOURCE_DIR}/lsmonitor
   ${CMAKE_CURRENT_SOURCE_DIR}/lsprobe
   ${CMAKE_CURRENT_SOURCE_DIR}/stlab
+  ${CMAKE_CURRENT_SOURCE_DIR}/file_event
   ${CONAN_INCLUDE_DIRS_ARGH}
   ${CONAN_INCLUDE_DIRS_SPDLOG}
   ${CONAN_INCLUDE_DIRS_FMT}
